--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ era digital. </p>
                             </div>
                         </div>
                         <div class="carousel-slide fade">
-                            <img src="./img/halliburtonMA.jpeg" alt="Descripción de la foto 2">
+                            <img src="./img/halliburtonMA.jpg" alt="Descripción de la foto 2">
                             <div class="carousel-caption">
                                 <p>Experiencia en Industrias Oil and Gas, Salud, Retail y Hoteleria</p>
                             </div>
