--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
             </button>
             <nav class="main-nav">
                 <ul>
+                    <li><a href="#sobre-mi-profesional">Sobre mí</a></li>
                     <li><a href="#experiencia">Experiencia Laboral</a></li>
                     <li><a href="#educacion">Educación</a></li>
                     <li><a href="#capacitaciones">Soft Skills</a></li>
-                    <li><a href="#tecnologias">Tecnologías Conocidas</a></li>
+                    <li><a href="#tecnologias">Tecnologías Aplicadas</a></li>
+                    <li><a href="#idiomas">Idiomas</a></li>
                     <li><a href="#casos-exito">Casos de Éxito</a></li>
+                    <li><a href="#sobre-mi-personal-hobbies">+ Sobre mí</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
@@ -94,8 +97,8 @@ era digital. </p>
                         <p class="company">YPF</p>
                         <p class="dates">01/01/2017 - 31/05/2025</p>
                         <ul>
-                            <li>Enfoque centrado en la creación de entornos de carga y visualización de información que respalden la toma de decisiones.<br>Procesos Claves:<br>- Detección de Necesidades del cliente<br>- Adquisición de Datos<br>- Visualización de Datos<br>- Automatización de tareas via Power Platform </li>
-                            <li>Casos de Éxito:<br>1- YPF 360 En desarrollo – App integral para toda la Empresa. Desarrollo en conjunto con Sistemas.<br>2- VP 360 2023/Presente – App integradora de la VP de Tecnologias Digitales. 
+                            <li>Enfoque centrado en la creación de entornos de carga y visualización de información que respalden la toma de decisiones.<br>Procesos Claves:<br>a) Detección de Necesidades del cliente<br>b) Adquisición de Datos<br>c) Visualización de Datos<br>d) Automatización de tareas via Power Platform </li>
+                            <li>Proyectos:<br>1- YPF 360 En desarrollo – App integral para toda la Empresa. Desarrollo en conjunto con Sistemas.<br>2- VP 360 2023/Presente – App integradora de la VP de Tecnologias Digitales. 
 Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App exclusiva que nuclea todos los sectores de Supply Chain.  
                             </li>
                         </ul>
@@ -110,8 +113,8 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
                         <p class="company">Halliburton</p>
                         <p class="dates">01/01/2012 - 31/12/2016</p>
                         <ul>
-                            <li>Planificación, gestión y ejecución de servicios especiales:<br>Procesos Clave:<br>- Desarrollo de Soluciones para clientes<br>- DIseño y Simulacion de fracturas hidraulicas<br>- Ejecución operativa<br>- Reportes operativos, de desempeño y de calidad </li>
-                            <li>Servicios Especiales:<br>- Fracturas Hidraulicas Convencionales/No Convencionales<br>- Acidificacion<br>- Control de Arenas<br>- Gestión de calidad en laboratorio y campo </li>
+                            <li>Planificación, gestión y ejecución de servicios especiales:<br>Procesos Clave:<br>a) Desarrollo de Soluciones para clientes<br>b) DIseño y Simulacion de fracturas hidraulicas<br>c) Ejecución operativa<br>d) Reportes operativos, de desempeño y de calidad </li>
+                            <li>Servicios Especiales:<br>1- Fracturas Hidraulicas Convencionales/No Convencionales<br>2- Acidificacion<br>3- Control de Arenas<br>4- Gestión de calidad en laboratorio y campo </li>
                             <li>Campañas:<br>- Petrobras/2013: Cuencas Austral<br>- YPF/2014 : Cuenca Neuquina </li>
                         </ul>
                     </div>
@@ -149,7 +152,7 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
                     <div class="content-wrapper">
                         <h3>Maestria en Supply Chain</h3>
                         <p class="institution">Universidad del Salvador - YPF</p>
-                        <p class="dates">10/2023 - 03/2025</p>
+                        <p class="dates">03/2022 - 10/2023</p>
                     </div>
                 </div>
                 <div class="education-entry">
@@ -181,7 +184,7 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
 
         <section id="tecnologias" class="section light-bg">
             <div class="container">
-                <h2>Tecnologías Conocidas</h2>
+                <h2>Tecnologías Aplicadas</h2>
                 <ul class="tech-list">
                     <li data-percentage="Avanzado">Power Apps</li>
                     <li data-percentage="Avanzado">Power Bi</li>
@@ -196,7 +199,7 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
             </div>
         </section>
 
-        <section id="tecnologias" class="section">
+        <section id="idiomas" class="section">
             <div class="container">
                 <h2>Idiomas</h2>
                 <ul class="tech-list">
@@ -257,13 +260,19 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
                             </div>
                         </div>
                         <div class="carousel-slide fade">
-                            <img src="./img/cocinaMA.jpeg" alt="Descripción de la foto 4">
+                            <img src="./img/amigosMA2.jpeg" alt="Descripción de la foto 4">
+                            <div class="carousel-caption">
+                                <p>y con más amigos.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-slide fade">
+                            <img src="./img/cocinaMA.jpeg" alt="Descripción de la foto 5">
                             <div class="carousel-caption">
                                 <p>Cocinar me divierte y me relaja.</p>
                             </div>
                         </div>
                         <div class="carousel-slide fade">
-                            <img src="./img/viajeMA.jpeg" alt="Descripción de la foto 5">
+                            <img src="./img/viajeMA.jpeg" alt="Descripción de la foto 6">
                             <div class="carousel-caption">
                                 <p>Me encanta viajar y conocer nuevas culturas, cada viaje es un aprendizaje inolvidable.</p>
                             </div>
@@ -305,7 +314,7 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
         <section id="ubicacion" class="section">
             <div class="container2">
                 <h2>¿Dónde me Ubico?</h2>
-                <p>Aquí puedes encontrar mi ubicación para reuniones o contacto presencial:</p>
+                <p>Me encuentro en el Barrio de Núñez, CABA</p>
                 <div class="map-container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.0848789070224!2d-58.46223432488762!3d-34.55140625473632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb428f3247daf%3A0x8150cc6075d1fcd0!2sGrecia%202967%2C%20C1429BDB%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1749736125097!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
                 </div>
@@ -317,7 +326,7 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Tu Nombre. Todos los derechos reservados.</p>
+            <p>Martin Arillo Cel: +54 011 57723999.</p>
         </div>
     </footer>
 
