--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
 
     <footer>
         <div class="container">
-            <p>Martin Arillo Cel: +54 011 57723999.</p>
+            <p>Ing Martin Arillo<br>Grecia 2967 Nuñez CABA<br>Cel: +54 011 57723999.</p>
+            
         </div>
     </footer>
 
