--- a/index.html
+++ b/index.html
@@ -216,21 +216,21 @@ Planeamiento, Ejecución y Gerenciamiento.<br>3- GESCOM 2020/Presente – App ex
                     <h3>APP VP 360</h3>
                     <p>Creador, Desarrollador y Gerenciador</p>
                     <ul>
-                        <li>-Única Fuente de Verdad</li>
-                        <li>-Módulos Personalizados</li>
-                        <li>-Integración de Sectores</li>
-                        <li>-Módulos Personalizados</li>
-                        <li>-All in One</li>
+                        <li>a) Única Fuente de Verdad</li>
+                        <li>b) Módulos Personalizados</li>
+                        <li>c) Integración de Sectores</li>
+                        <li>d) Módulos Personalizados</li>
+                        <li>e) All in One</li>
                     </ul>
                     </div>
                 <div class="case-study">
                     <h3>Desafio DWx</h3>
                     <p>Creador, Desarrollador y Gerenciador</p>
                     <ul>
-                        <li>-Ahorro de 500K USD en Dev</li>
-                        <li>-Captura Real de Valor Sostenido</li>
-                        <li>-Transversalidad</li>
-                        <li>-Más de 700 Usuarios activos</li>
+                        <li>a) Ahorro de 500K USD en I+D</li>
+                        <li>b) Captura Real de Valor Sostenido</li>
+                        <li>c) Transversalidad</li>
+                        <li>d) Más de 700 Usuarios activos</li>
                     </ul>
                 </div>
             </div>
