--- a/index.html
+++ b/index.html
@@ -291,6 +291,12 @@
                             </div>
                         </div>
                         <div class="carousel-slide fade">
+                            <img src="./img/amigosMA3.jpeg" alt="Descripción de la foto 7">
+                            <div class="carousel-caption">
+                                <p><span data-en="and even more friends.">y muchos más amigos.</span></p>
+                            </div>
+                        </div>
+                        <div class="carousel-slide fade">
                             <img src="./img/cocinaMA.jpeg" alt="Descripción de la foto 5">
                             <div class="carousel-caption">
                                 <p><span data-en="Cooking is fun and relaxing for me.">Cocinar me divierte y me relaja.</span></p>
